[tool.poetry]
name = "scrape-with-selenium"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scrape_with_selenium"}]

[tool.poetry.dependencies]
python = "^3.10"
replit = "3.6.3"
pandas = "2.2.2"
matplotlib = "3.8.4"
flask = "3.0.3"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
